# coord-ingest

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: IP_POLICY.md
src/coord_ingest/: __init__.py  adapters.py  pipeline.py
src/coord_ingest/data/: sample_feed.json
tests/: test_ingest.py
